--- a/Kahlo/nbproject/project.properties
+++ b/Kahlo/nbproject/project.properties
@@ -1,9 +1,11 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Kahlo
+application.vendor=JCORREA
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,10 +28,31 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Kahlo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.hamcrest-core-1.3.jar=C:\\Users\\JCORREA\\Downloads\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\hamcrest-core-1.3.jar
+file.reference.jcommon-1.0.23.jar=C:\\Users\\JCORREA\\Downloads\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19-experimental.jar=C:\\Users\\JCORREA\\Downloads\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19-experimental.jar
+file.reference.jfreechart-1.0.19-swt.jar=C:\\Users\\JCORREA\\Downloads\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19-swt.jar
+file.reference.jfreechart-1.0.19.jar=C:\\Users\\JCORREA\\Downloads\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19.jar
+file.reference.jfreesvg-2.0.jar=C:\\Users\\JCORREA\\Downloads\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jfreesvg-2.0.jar
+file.reference.jxbrowser-5.4.1.jar=C:\\Users\\JCORREA\\Documents\\lib\\jxbrowser-5.4.1.jar
+file.reference.jxbrowser-win-5.4.1.jar=C:\\Users\\JCORREA\\Documents\\lib\\jxbrowser-win-5.4.1.jar
+file.reference.license.jar=C:\\Users\\JCORREA\\Documents\\license.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
-javac.classpath=
+jar.index=${jnlp.enabled}
+javac.classpath=\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19-experimental.jar}:\
+    ${file.reference.jfreechart-1.0.19-swt.jar}:\
+    ${file.reference.jfreesvg-2.0.jar}:\
+    ${file.reference.license.jar}:\
+    ${file.reference.jxbrowser-5.4.1.jar}:\
+    ${file.reference.jxbrowser-win-5.4.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -53,7 +76,20 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=kahlo.Kahlo
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
